Fix feature-swiper next button overflow & build static
This reverts commit 4fb5a5049c89446a229b8e9cae1fa8c511da84ea.

--- a/frontend/scss/cells/_maxi-swiper.scss
+++ b/frontend/scss/cells/_maxi-swiper.scss
@@ -41,7 +41,7 @@
     &:not(.maxi-swiper-centered) {
       @include greaterThan('sm') {
         .swiper-button-next {
-          right: 0px;
+          right: -45px;
         }
 
         .swiper-button-prev {
